--- a/src/components/Navbar/Header/Header.css
+++ b/src/components/Navbar/Header/Header.css
@@ -1,9 +1,10 @@
 .header{
     height: 34vw;
-    margin: 30px auto;
+    /* margin: 30px auto; */
     background: url('../../../assets/header_img.png') no-repeat;
     background-size: contain;
     position: relative; 
+    
 }
 .header-contents{
     position: absolute;
@@ -35,6 +36,7 @@
     border-color: white;
     font-size: max(1vw,13px);
     border-radius: 50px;
+    
 }
 @media (max-width:1050px){
     .header-contents{
